--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <link rel="dns-prefetch" href="http://yoursite.com">
-  <title>张不俊学习的地方</title>
+  <title>张不俊的博客</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
-<meta property="og:title" content="张不俊学习的地方">
+<meta property="og:title" content="张不俊的博客">
 <meta property="og:url" content="http://yoursite.com/index.html">
-<meta property="og:site_name" content="张不俊学习的地方">
+<meta property="og:site_name" content="张不俊的博客">
 <meta property="og:locale" content="default">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="张不俊学习的地方">
+<meta name="twitter:title" content="张不俊的博客">
   
-    <link rel="alternative" href="/atom.xml" title="张不俊学习的地方" type="application/atom+xml">
+    <link rel="alternative" href="/atom.xml" title="张不俊的博客" type="application/atom+xml">
   
   
     <link rel="icon" href="/favicon.png">
@@ -46,7 +46,7 @@
 			<img src="" class="js-avatar">
 		</a>
 		<hgroup>
-		  <h1 class="header-author"><a href="/">ZhangJun</a></h1>
+		  <h1 class="header-author"><a href="/">张不俊</a></h1>
 		</hgroup>
 		
 
@@ -104,7 +104,7 @@
 				<img src="" class="js-avatar">
 			</div>
 			<hgroup>
-			  <h1 class="header-author js-header-author">ZhangJun</h1>
+			  <h1 class="header-author js-header-author">张不俊</h1>
 			</hgroup>
 			
 			
@@ -233,7 +233,7 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; 2018 ZhangJun
+    		&copy; 2018 张不俊
     	</div>
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
