--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <li><p>超链接</p>
 <p>Markdown有两种超链接的方式。</p>
 <ul>
-<li><p><a href="This is a inline link">内联链接</a>，将超链接绑定到一块文本上。例如<a href="www.markdowntutorial.com">Markdown教程</a>，当点击有超链接的文本时，就会跳转到绑定的链接上。采用的方式是在[]中括号之后紧跟()小括号，中括号中的内容就是文本，小括号中的内容就是需要绑定的链接。</p>
+<li><p><a href="www.baidu.com">内联链接</a>，将超链接绑定到一块文本上。例如<a href="www.markdowntutorial.com">Markdown教程</a>，当点击有超链接的文本时，就会跳转到绑定的链接上。采用的方式是在[]中括号之后紧跟()小括号，中括号中的内容就是文本，小括号中的内容就是需要绑定的链接。</p>
 </li>
 <li><p>[引用链接][reference link]，引用链接是链接到文本中的其他地方。例如[跳转到Baidu][reference link]，采用的方式是在[]中括号之后紧跟[]中括号，第一个中括号中是文本，第二个中括号就是链接的地址（其指向一个外部链接）。引用链接的优势是指向同一个链接的多处文本可以复用链接地址，如果有修改，也只需要修改一处即可。</p>
 </li>
@@ -201,7 +201,7 @@
 <li><p>列表</p>
 <p>Markdown中列表也有两种表示：</p>
 <ul>
-<li>无序列表，无序列表以<strong>*</strong>符号前缀修饰，展示出来的结果就是这篇文章里的每个操作列一样。</li>
+<li>无序列表，无序列表以*符号前缀修饰，展示出来的结果就是这篇文章里的每个操作列一样。</li>
 <li>有序列表，有序列表以数字开头：<ol>
 <li>这是有序列表1</li>
 <li>这是有序列表2</li>
@@ -210,13 +210,13 @@
 </ul>
 </li>
 <li><p>分隔线</p>
-<p>三个连续的-号表示细分隔线。—</p>
+<p>三个连续的-号表示细分隔线。</p>
 <hr>
 <p>三个连续的*号表示粗分隔线。</p>
 <hr>
 </li>
 <li><p>代码块</p>
-<p>Markdown利用***<figure class="highlight plain"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br><span class="line">6</span><br><span class="line">7</span><br></pre></td><td class="code"><pre><span class="line"></span><br><span class="line">```Java</span><br><span class="line">public class Program &#123;</span><br><span class="line">    public static void main(String[] args) &#123;</span><br><span class="line">        System.out.println(&quot;this is a java code in markdown&quot;);</span><br><span class="line">    &#125;</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure></p>
+<p>Markdown利用<figure class="highlight plain"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br><span class="line">6</span><br><span class="line">7</span><br></pre></td><td class="code"><pre><span class="line"></span><br><span class="line">```Java</span><br><span class="line">public class Program &#123;</span><br><span class="line">    public static void main(String[] args) &#123;</span><br><span class="line">        System.out.println(&quot;this is a java code in markdown&quot;);</span><br><span class="line">    &#125;</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure></p>
 </li>
 <li><p>编辑器</p>
 <p>目前用的Markdown的编辑器是<a href="https://typora.io/" target="_blank" rel="noopener">Typora</a>，体验还不错，推荐一发。</p>
