--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <li><p>超链接</p>
 <p>Markdown有两种超链接的方式。</p>
 <ul>
-<li><p><a href="This is a inline link">内联链接</a>，将超链接绑定到一块文本上。例如<a href="www.markdowntutorial.com">Markdown教程</a>，当点击有超链接的文本时，就会跳转到绑定的链接上。采用的方式是在[]中括号之后紧跟()小括号，中括号中的内容就是文本，小括号中的内容就是需要绑定的链接。</p>
+<li><p><a href="This is a inline link">内联链接</a>，将超链接绑定到一块文本上。例如<a href="http://www.markdowntutorial.com" target="_blank" rel="noopener">Markdown教程</a>，当点击有超链接的文本时，就会跳转到绑定的链接上。采用的方式是在[]中括号之后紧跟()小括号，中括号中的内容就是文本，小括号中的内容就是需要绑定的链接。</p>
 </li>
 <li><p>[引用链接][reference link]，引用链接是链接到文本中的其他地方。例如[跳转到Baidu][reference link]，采用的方式是在[]中括号之后紧跟[]中括号，第一个中括号中是文本，第二个中括号就是链接的地址（其指向一个外部链接）。引用链接的优势是指向同一个链接的多处文本可以复用链接地址，如果有修改，也只需要修改一处即可。</p>
 </li>
