--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@ var _hmt = _hmt || [];
 		</ul>
 	</div>
 
+      <span id="busuanzi_container_page_pv">
+       | 阅读量(<span id="busuanzi_value_page_pv"></span>)
+      </span>
       
 
       
