--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@ var _hmt = _hmt || [];
     <div class="article-entry" itemprop="articleBody">
       
         <p><a href="%22https://maven.apache.org/what-is-maven.html%22">Maven</a>是构建Java项目常用的依赖管理及编译工具。其中，依赖管理（Dependency Management）应该是最为人知的一项feature了：在使用Maven构建项目时，我们不需要手动下载依赖包，而只需要在<a href="https://maven.apache.org/guides/introduction/introduction-to-the-pom.html" target="_blank" rel="noopener">Pom</a>文件中定义相关依赖包的信息，就可以方便地引入所需的依赖包。那么Maven中的依赖管理是如何做的呢？</p>
+<h3>依赖传递</h3>
+<h3>依赖作用域</h3>
+<h3>依赖管理</h3>
+<h3>依赖冲突</h3>
+<h3>常用命令与插件</h3>
 
       
 
